--- a/scripts/eeFec.Rmd
+++ b/scripts/eeFec.Rmd
@@ -43,12 +43,13 @@ names(eelife)[1]<-"event"
 eelife$cageID <- as.character(eelife$cageID)
 head(eelife)
 
-ff <- subset(eelife, eelife$sex=="F")
+ff <- subset(eelife, eelife$Sex == "Female")
+head(ff)
 
 # Get medians
 
 # by treatment combinations
-ffm <- survfit(Surv(age, status == 2) ~ adultTreat,
+ffm <- survfit(Surv(NewAge, status == 2) ~ adultTreat,
                    conf.type = "log", 
                    conf.int = 0.95,
                    type = "kaplan-meier",
